--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -394,60 +394,91 @@
 
   .product-section {
     padding-bottom: 42px;
-    .product-card-list {
-      @include flex-layout();
-      height: 414px;
-      padding: 18px;
-      gap: 28px;
-      overflow-x: auto; // Scroll horizontal
-      overflow: hidden;
-      scroll-snap-type: x mandatory; // Ajuste de desplazamiento suave
-      // -webkit-overflow-scrolling: touch; // Scroll suave en dispositivos móviles
 
-      .product-card {
-        @include flex-layout($direction: column, $justify: flex-start, $align: center);
-        width: 298px;
-        height: 334px;
-        gap: 0;
-        border-radius: 12px;
-        background: #FFF;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    .carousel-container {
+      position: relative;
+      display: flex;
+      align-items: center;
 
-        .card-image {
-          width: 298px;
-          height: 228px;
-          border-radius: 12px 12px 0 0;
-          overflow: hidden;
+      .carousel-button {
+        display: flex;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(255, 255, 255, 0.7);
+        border: none;
+        padding: 10px;
+        cursor: pointer; 
+        z-index: 2;
 
-          img {
-            width: 100%;
-            height: 100%;
-          }
+        &.left-button {
+          left: 0;
         }
 
-        .card-text {
-          padding-top: 12px;
-          gap: 1px;
-          height: 92px;
+        &.right-button {
+          right: 0;
+        }
+      }
 
-          .card-title {
-            @include typography($color: $primary-text-color, $size: 16px, $weight: 700, $lineHeight: 1.2, $align: left);
+      .product-card-list {
+        @include flex-layout();
+        height: 414px;
+        padding: 18px;
+        gap: 28px;
+        overflow-x: auto; // Scroll horizontal
+        overflow: hidden;
+        scroll-snap-type: x mandatory; // Ajuste de desplazamiento suave
+        // -webkit-overflow-scrolling: touch; // Scroll suave en dispositivos móviles
+
+
+        .product-card {
+          @include flex-layout($direction: column, $justify: flex-start, $align: center);
+          width: 298px;
+          height: 334px;
+          gap: 0;
+          border-radius: 12px;
+          background: #FFF;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+          .card-image {
+            width: 298px;
+            height: 228px;
+            border-radius: 12px 12px 0 0;
+            overflow: hidden;
+
+            img {
+              width: 100%;
+              height: 100%;
+            }
           }
 
-          .card-info {
-            width: 100%;
-            height: 18px;
-            @include typography($color: $primary-text-color, $size: 13.33px, $weight: 400, $lineHeight: 1.2, $align: left);
-          }
+          .card-text {
+            padding-top: 12px;
+            gap: 1px;
+            height: 92px;
 
-          .card-price {
-            padding-bottom: 12px;
-            @include typography($color: $primary-text-color, $size: 16px, $weight: 400, $lineHeight: 1.2, $align: left);
+            .card-title {
+              @include typography($color: $primary-text-color, $size: 16px, $weight: 700, $lineHeight: 1.2, $align: left);
+            }
+
+            .card-info {
+              width: 100%;
+              height: 18px;
+              @include typography($color: $primary-text-color, $size: 13.33px, $weight: 400, $lineHeight: 1.2, $align: left);
+            }
+
+            .card-price {
+              padding-bottom: 12px;
+              @include typography($color: $primary-text-color, $size: 16px, $weight: 400, $lineHeight: 1.2, $align: left);
+            }
           }
         }
       }
     }
   }
+
+
+
 
   .newsletter-section {
     @include flex-layout(row, space-between, stretch);
