--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -75,10 +75,10 @@
   }
 
 
-.input-container {
+  .input-container {
     position: relative;
     width: 100%;
-  
+
     .input {
       width: 344px;
       height: 40px;
@@ -87,9 +87,11 @@
 
     .input-label {
       position: absolute;
-      top: 50%; /* Centra verticalmente el label dentro del input */
+      top: 50%;
+      /* Centra verticalmente el label dentro del input */
       left: 12px;
-      transform: translateY(-50%); /* Asegura que el label esté centrado verticalmente */
+      transform: translateY(-50%);
+      /* Asegura que el label esté centrado verticalmente */
       color: #888;
       font-size: 16px;
       pointer-events: none;
@@ -273,7 +275,7 @@
     @include flex-layout(row, center, center);
     height: 48px;
     padding: 0 15px 0 14px;
- //   flex-shrink: 0;
+    //   flex-shrink: 0;
     background: $background-color;
     @include typography($color: $primary-text-color, $size: 19.2px, $weight: 700, $lineHeight: 120%, $align: center);
   }
@@ -295,6 +297,7 @@
       .workshop-image-right {
         height: auto;
         max-width: 656px;
+
         img {
           @include image-resize(96%, auto);
         }
@@ -398,60 +401,67 @@
 
   .product-section {
     padding-bottom: 38px;
-    .product-card-list {
-      @include flex-layout();
-      height: 348px;
-      padding: 24px;
-      gap: 24px;
-      overflow-x: auto; // Scroll horizontal
-      overflow: hidden;
 
-      overflow-x: auto; //scroll horizontal
-      scroll-snap-type: x mandatory; // Ajuste de desplazamiento suave
-      scrollbar-width: none;
-      /* Ocultar barra de desplazamiento en Firefox */
-      -ms-overflow-style: none;
-
-      /* Ocultar barra de desplazamiento en Internet Explorer y Edge */
-      ::-webkit-scrollbar {
+    .carousel-container {
+      .carousel-button {
         display: none;
-        /* Ocultar barra de desplazamiento en Chrome, Safari, Opera */
       }
 
-      .product-card {
-        @include flex-layout($direction: column, $justify: flex-start, $align: center); // Flexbox vertical centrado
-        width: 232px;
-        height: 283px;
-        gap: 0;
-        border-radius: 12px;
-        background: #FFF;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      .product-card-list {
+        @include flex-layout();
+        height: 348px;
+        padding: 24px;
+        gap: 24px;
+        overflow-x: auto; // Scroll horizontal
+        overflow: hidden;
 
-        .card-image {
-          width: 232px;
-          height: 188px;
-          border-radius: 12px 12px 0 0; // Ajuste de las esquinas redondeadas
+        overflow-x: auto; //scroll horizontal
+        scroll-snap-type: x mandatory; // Ajuste de desplazamiento suave
+        scrollbar-width: none;
+        /* Ocultar barra de desplazamiento en Firefox */
+        -ms-overflow-style: none;
 
-          img {
-            width: 100%; // Asegura que la imagen ocupe todo el contenedor
-            height: 100%;
-          }
+        /* Ocultar barra de desplazamiento en Internet Explorer y Edge */
+        ::-webkit-scrollbar {
+          display: none;
+          /* Ocultar barra de desplazamiento en Chrome, Safari, Opera */
         }
 
-        .card-text {
-          padding-top: 12px;
+        .product-card {
+          @include flex-layout($direction: column, $justify: flex-start, $align: center); // Flexbox vertical centrado
+          width: 232px;
+          height: 283px;
+          gap: 0;
+          border-radius: 12px;
+          background: #FFF;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-          .card-title {
-            @include typography($size: 13.33px, $weight: 700);
+          .card-image {
+            width: 232px;
+            height: 188px;
+            border-radius: 12px 12px 0 0; // Ajuste de las esquinas redondeadas
+
+            img {
+              width: 100%; // Asegura que la imagen ocupe todo el contenedor
+              height: 100%;
+            }
           }
 
-          .card-info {
-            @include typography($size: 12px);
-          }
+          .card-text {
+            padding-top: 12px;
 
-          .card-price {
-            padding-bottom: 8px;
-            @include typography($size: 13.33px);
+            .card-title {
+              @include typography($size: 13.33px, $weight: 700);
+            }
+
+            .card-info {
+              @include typography($size: 12px);
+            }
+
+            .card-price {
+              padding-bottom: 8px;
+              @include typography($size: 13.33px);
+            }
           }
         }
       }
@@ -508,7 +518,7 @@
           align-self: flex-start;
         }
 
-      
+
       }
     }
   }
